# task_manager

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  Readme.md  abstract_task_handler.h  bash_task_handler.cpp  bash_task_handler.h  main.cpp  task_cache.cpp  task_cache.h  task_dispatch.cpp  task_dispatch.h  task_info.cpp  task_info.h  task_manager.cpp  task_manager.h  task_manager.pro  任务管控终端的代码实现.md
.github/workflows/: build.yml
debian/: changelog  control  copyright  rules
src/manager/: CMakeLists.txt  cache.cpp  cache.h  dispatcher.cpp  dispatcher.h  io.github.ssk.TaskManager.xml  main.cpp  manager.cpp  manager.h  manager_adapter.cpp  manager_adapter.h  reporter.cpp  reporter.h  taskmanager_adapter.cpp  taskmanager_adapter.h
src/manager/handler/: abstract_task_handler.h  bash_task_handler.cpp  bash_task_handler.h  ping_task_handler.h  settings_task_handler.cpp  settings_task_handler.h  strategy_task_handler.cpp  strategy_task_handler.h  task.h
src/simulator/: CMakeLists.txt  main.cpp
task_manager/: main.cpp  task.cpp  task.h  task_cache.cpp  task_cache.h  task_dispatch.cpp  task_dispatch.h  task_manager.cpp  task_manager.h  task_manager.pro  task_manager_adapter.cpp  task_manager_adapter.h  task_reporter.cpp  task_reporter.h
task_manager/handler/: abstract_task_handler.h  bash_task_handler.cpp  bash_task_handler.h  ping_task_handler.cpp  ping_task_handler.h  settings_task_handler.cpp  settings_task_handler.h  strategy_task_handler.cpp  strategy_task_handler.h
task_simulator/: main.cpp  task_simulator.pro
tests/: CMakeLists.txt  main.cpp
tests/cmake/modules/: FindGmock.cmake
